# CustomModel

./: .gitignore  README.md  config.env  create_nova_finetuning_job.py  deploy_nova_model.sh  main.py  plot_training_metrics.py  prepare-dataset.py  prepare_nova_training_data.py  pyproject.toml  run_nova_preparation.sh  step_wise_training_metrics.csv  test.py  training_data.jsonl  upload_training_data.py  validate_nova_dataset.py
data/: invoice_sellers.csv
data/bedrock-ft/: test_data.jsonl  train_data.jsonl
data/label_data/: label_data.csv  test_label.csv  train_label.csv
docs/: api_reference.md  pipeline_usage.md
scripts/: create_nova_ft_job.py  generate_labels_with_llm.py  jsonl_to_s3.py  nova_ft_dataset_validator.py  prepare-dataset.py  process_images_for_training.py  rename_to_jpeg.sh  run_complete_pipeline.sh  run_data_preparation.sh  run_nova_preparation.sh  setup_environment.sh  upload_data_to_s3.py  validate_jsonl.sh  validate_training_dataset.py  visualize_detailed_metrics.py  visualize_training_metrics.py
